CHATS_SIT/force-app/main/default/objects/User.object
<CustomObject>
    <fields>
        <fullName>Date_Deactivated__c</fullName>
        <label>Date Deactivated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Owner_County__c</fullName>
        <label>Owner County</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00005</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Common_County_Text__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Common County Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Common_County__c</fullName>
        <label>Other County</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CountyWithoutOther</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_Deactivated__c</fullName>
        <label>Reason Deactivated</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00841</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_for_Universal_User_access__c</fullName>
        <label>Reason for Universal User access</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>RT_REASON_FOR_UNIVERSAL_ACCESS</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Temporary_Access_Begin__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Temporary Access Begin Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Temporary_Access_End__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Temporary Access End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Access_Request_Justification__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Access Request Justification</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PEAK_Overdue_Task_Assignee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PEAK Overdue Task Assignee</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Restrict_Email_Change</fullName>
        <active>true</active>
        <description>Only System Administrator and CHATS System Administrator can change email address on User record.</description>
        <errorConditionFormula>AND(
    ISCHANGED(Email), 
NOT($Permission.System_Administrator)
)</errorConditionFormula>
        <errorDisplayField>Email</errorDisplayField>
        <errorMessage>Insufficient access to change Email</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TemporaryAccessBeginDateRrquiredUniversa</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Profile.Name =&apos;Universal User&apos;,  
ISPICKVAL( Reason_for_Universal_User_access__c , &apos;1&apos;) , 
ISNULL(Temporary_Access_Begin__c ) )</errorConditionFormula>
        <errorDisplayField>Temporary_Access_Begin__c</errorDisplayField>
        <errorMessage>Temporaray Access Begin Date is Required for profile Universal User and Reason for Universal User is Time Limited temporary access request (No longer than 6 months at a time)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TemporaryAccessEndDatePriorBeginDate</fullName>
        <active>true</active>
        <description>Temporary Access End date cannot be prior to Temporary Access Begin Date</description>
        <errorConditionFormula>Temporary_Access_End__c  &lt;  Temporary_Access_Begin__c</errorConditionFormula>
        <errorDisplayField>Temporary_Access_End__c</errorDisplayField>
        <errorMessage>Temporary Access End date cannot be prior to Temporary Access Begin Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TemporaryAccessEndDateRrquiredUniversal</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Profile.Name =&apos;Universal User&apos;,  
ISPICKVAL( Reason_for_Universal_User_access__c , &apos;1&apos;) , 
ISNULL(Temporary_Access_End__c ) )</errorConditionFormula>
        <errorDisplayField>Temporary_Access_End__c</errorDisplayField>
        <errorMessage>Temporary Access End Date is required when profile is Universal User and Reason for Universal User Access is Time Limited temporary access request (No longer than 6 months at a time)</errorMessage>
    </validationRules>
</CustomObject>